--- a/pod.yaml
+++ b/pod.yaml
@@ -5,6 +5,6 @@ metadata:
 spec:  
   containers:
     - name: test-container
-      image: sachinamit12/my-app:latest
+      image: sachinamit12/new:1.0
       ports:
         - containerport: 3000
